--- a/Assets/Combat/Unity.Combat.asmdef
+++ b/Assets/Combat/Unity.Combat.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:0d1ae7fff56963548a2a2a16dab3c5c6",
-        "GUID:89fdb54e773827b40b9127329bdaed75"
+        "GUID:89fdb54e773827b40b9127329bdaed75",
+        "GUID:f06555f75b070af458a003d92f9efb00"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
